[package]
name = "soroban-expr-eval-primitive"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
#testutils = ["soroban-sdk/testutils", "soroban-token-contract/testutils", "dep:ed25519-dalek"]
testutils = ["soroban-sdk/testutils", "dep:ed25519-dalek"]

[dependencies]
soroban-sdk = "0.0.3"
#soroban-token-contract = { version = "0.0.2", default-features = false  }
ed25519-dalek = { version = "1.0.1", optional = true }

[dev_dependencies]
soroban-expr-eval-primitive = { path = ".", default-features = false, features = ["testutils"] }
rand = { version = "0.7.3" }

